--- a/MultiModality-Task/entireGNNpipelineFINALISH.ipynb
+++ b/MultiModality-Task/entireGNNpipelineFINALISH.ipynb
@@ -16,6 +16,11 @@
     "accelerator": "GPU",
     "widgets": {
       "application/vnd.jupyter.widget-state+json": {
+        "state": {
+    "344879011d1b4258950add41afa3d502": { … }
+  },
+  "version_major": 2,
+  "version_minor": 0
         "344879011d1b4258950add41afa3d502": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "HBoxModel",
